# exp-fastapi-sql

./: README.md  pyproject.toml  sql_app.db
fastapi_sql/: database.py
